chore: snapshot full workspace changes for rollback
Create a full project snapshot branch to preserve current in-progress changes for future rollback and comparison.

Note: exclude large *.glb assets under 数字车间 to satisfy GitHub file size limits.
Made-with: Cursor